# booster_gym

./: .gitignore  MUJOCO_LOG.TXT  README.MD  README.md  activation.sh  pixi.toml  play_mujoco.py  pyproject.toml
booster_gym/: export_model.py  play.py  play_mujoco.py  train.py
booster_gym/deploy/: deploy.py
booster_gym/deploy/configs/: T1.yaml
booster_gym/envs/: __init__.py  base_task.py  t1.py
booster_gym/utils/: runner.py
deploy/: deploy.py
deploy/utils/: policy.py  remote_control_service.py
envs/: T1.yaml
resources/T1/: T1_serial.urdf
