[project]
name = "booster_gym"
version = "0.1.0"
description = "Locomotion using Reinforcement Learning and Model Predictive Control"
authors = [{name = "neverorfrog", email = "97flavio.maiorana@gmail.com"}]
requires-python = "==3.11"
license = {text = "Apache-2.0"}
readme = "README.md"

[project.scripts]
play = "booster_gym.play:main"
play_mujoco = "booster_gym.play_mujoco:main"
export_model = "booster_gym.export_model:main"
deploy = "booster_gym.deploy.deploy:main"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["booster_gym"]

[tool.hatch.build.targets.editable]
packages = ["booster_gym"]
